# ListOpt.BE.catalog

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  config.yml  logger.yml  main.py  policy.csv  pyproject.toml
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug.md  epic.md  feature.md
.github/workflows/: blocking-issues.yml  cd.yml  ci.yml  clean-cache.yml  labeler.yml  size-label.yml  wemake-review.yml
catalog/: error_names.py  exceptions.py  scopes.py
catalog/application/: _base.py
catalog/application/commands/: __init__.py  add_cart_command.py  add_product_command.py  add_products_to_cart_command.py  change_quantities_products_in_cart_command.py  remove_products_from_cart_command.py
catalog/application/queries/: __init__.py  get_cart_by_user_query.py  get_categories_query.py  get_product_query.py  paginate_products_query.py
catalog/domain/: exceptions.py  names.py
catalog/domain/entities/: __init__.py  cart.py  category.py  entity.py  product.py  product_field.py  product_in_cart.py
catalog/domain/ports/: uow.py
catalog/domain/ports/repos/: __init__.py  abstract.py  cart_repo.py  category_repo.py  product_repo.py
catalog/domain/services/: __init__.py  cart_service.py  category_service.py  product_service.py
catalog/domain/value_objects/: __init__.py  category_name.py  company_id.py  dimension.py  non_empty_str.py  positive_int.py  price.py  product_identifier.py  product_name.py  product_photo.py  quantity.py  user_id.py  value_object.py
catalog/infrastructure/: executable.py  runner.py
catalog/infrastructure/db/: connection.py  helpers.py  orm.py  uow.py
catalog/infrastructure/db/migrations/: env.py
catalog/infrastructure/db/migrations/versions/: 4492e69f052b_add_measure_to_product_fields.py  5688d8939055_init.py
catalog/infrastructure/db/repos/: __init__.py  base.py  cart_repo.py  category_repo.py  product_repo.py
catalog/infrastructure/db/tables/: __init__.py  cart.py  category.py  product.py  product_fields.py  product_in_cart.py  with_timestamp.py
catalog/infrastructure/di/: __init__.py  container.py
catalog/infrastructure/fastapi/: __init__.py  app.py  dependencies.py  jwt_bearer_security.py  user.py
catalog/infrastructure/logger/: __init__.py
catalog/infrastructure/security/: __init__.py  _base.py  payload_schema.py
catalog/infrastructure/security/jwt/: __init__.py  jwt_decoder.py  jwt_encoder.py  jwt_service.py
catalog/infrastructure/security/permissions/: __init__.py  permission_service.py
catalog/infrastructure/settings/: __init__.py
catalog/presentation/rest/: __init__.py  _base_schemas.py  health.py
catalog/presentation/rest/cart/: router.py  schemas.py
catalog/presentation/rest/category/: router.py  schemas.py
catalog/presentation/rest/product/: router.py  schemas.py
logs/: json.log.2025-09-07  log.log.2025-09-07
tests/: conftest.py  context.py
tests/factories/: __init__.py  attributes.py  cart_factory.py  category_factory.py  dimension_factory.py  faker.py  mixins.py  price_factory.py  product_factory.py  product_field_factory.py  product_identifier_factory.py  product_in_cart_factory.py
tests/unit/domain/entities/: test_cart.py  test_category.py  test_product.py  test_product_in_cart.py
tests/unit/domain/value_objects/: test_dimension.py  test_price.py  test_product_field.py  test_product_identifier.py
tests/unit/infrastructure/db/: test_connection.py  test_uow.py
tests/unit/infrastructure/db/repos/: conftest.py  test_base_repo.py  test_cart_repo.py  test_category_repo.py  test_product_repo.py
